# SPDX-FileCopyrightText: 2026 Knitli Inc. (Recoco)
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "recoco"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = { workspace = true }
readme = "../../README.md"
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
# Re-export all sub-crates
recoco-core = { workspace = true }
recoco-splitters = { workspace = true }
recoco-utils = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[features]
default = [
  "recoco-core/default",
  "recoco-splitters/default",
  "recoco-utils/default"
]
